test to see if the body's height set to 100vh fixes the cover on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,6 @@
+.body{
+  height: 100vh;
+}
 .nav-bar {
   position: fixed;
   top: 0;
